Fix TextEdit vertical alignment.

Don't ignore the position of a QTextDocument when contructing a text
node, and translate the rectangle returned by positionToRectangle by
the y offset.

Task-number: QTBUG-23935
Change-Id: I55a2b69a32a8b623be7e36de54ad083c2f8591e5
Reviewed-by: Martin Jones <martin.jones@nokia.com>